Adjusted content container to not grow over 700px. Fixed overflow on mobile devices to fit their exact screen-size without horizontal scrolling.

--- a/content/assets/css/styles.scss
+++ b/content/assets/css/styles.scss
@@ -6,10 +6,15 @@
 $max-width: $container-lg;
 
 /* main layout */
+html {
+  width: 100%;
+  overflow: hidden;
+}
+
 body {
   padding-top: $navbar-height;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .top-space {
@@ -35,13 +40,13 @@ p {
   margin-bottom: 0.5em;
 }
 
+.container, .container-fluid {
+  max-width: $max-width;
+}
+
 /* navigation bar */
 .navbar {
   border: none;
-
-  .container-fluid {
-    max-width: $max-width;
-  }
   
   .navbar-brand {
     font-size: 24px;
